# rememberizer-mcp-test-hosting

./: README.md  pyproject.toml
src/mcp_server_rememberizer/: server.py
