[project]
name = "rememberizer-mcp-test-hosting"
version = "0.1.4"
description = "Test MCP server hosting with MSeeP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "httpx>=0.27.2",
 "mcp>=1.0.0",
 "python-dotenv>=1.0.1",
]
[[project.authors]]
name = "Rememberizer"
email = "support@rememberizer.ai"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_rememberizer"]

[dependency-groups]
dev = [
    "pyright>=1.1.389",
]

[project.scripts]
rememberizer-mcp-test-hosting = "mcp_server_rememberizer:main"

# ==== isort ====
[tool.isort]
profile = "black"
line_length = 118
